<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_white"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/image_bg"
        android:padding="20dp">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:background="@drawable/logo"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/e_mail"
            android:textColor="@color/light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/deliver_mail_ru"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/password"
            android:textColor="@color/light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/full_name"
            android:textColor="@color/light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/full_name_example"
            android:inputType="textCapWords"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/phone_number"
            android:textColor="@color/light_black"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number_example"
            android:inputType="phone"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/register_now"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:padding="25dp"/>

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/cancel"
            android:background="@drawable/button_bg"
            android:backgroundTint="@color/orange"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="17sp"
            android:padding="25dp"/>

    </LinearLayout>

</LinearLayout>