<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context=".OnBoarding2">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/on_boarding_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="200dp"
        android:layout_height="120dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/title_bg"
        android:rotation="-20"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintEnd_toEndOf="@id/imageView" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/italianno"
        android:rotation="-20"
        android:text="@string/welcome_to_wsr_food"
        android:textColor="@color/black"
        android:textSize="44sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/view"
        app:layout_constraintTop_toTopOf="@+id/view" />

    <Button
        android:id="@+id/buttonSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/italianno"
        android:paddingStart="48dp"
        android:paddingTop="25dp"
        android:paddingEnd="48dp"
        android:paddingBottom="25dp"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonSignUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="15dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/italianno"
        android:paddingStart="48dp"
        android:paddingTop="25dp"
        android:paddingEnd="48dp"
        android:paddingBottom="25dp"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/buttonSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonSignIn"
        app:layout_constraintTop_toTopOf="@+id/buttonSignIn" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn">

        <RadioButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:buttonTint="@color/secondary_white"
            android:gravity="center"

            android:textAlignment="center" />

        <RadioButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:buttonTint="@color/white"
            android:checked="true" />

    </RadioGroup>

    <TextView
        android:id="@+id/textViewSkipAuthorization"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/skip_authorization"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>